--- a/Arisa - Splitting Train Test.ipynb
+++ b/Arisa - Splitting Train Test.ipynb
@@ -2,26 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "356025b8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-23 00:12:14.816697: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-23 00:12:16.110463: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-03-23 00:12:16.126642: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-03-23 00:12:27.836400: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-23 00:12:27.836505: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-23 00:12:27.836517: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -54,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "94f4889c-7931-4347-900b-9cde82152e38",
    "metadata": {
     "tags": []
@@ -255,7 +241,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "090f815f-b410-491e-b21c-c05b47b1d97f",
    "metadata": {
     "tags": []
@@ -331,7 +317,7 @@
        " '94188']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "0356aacb-9f2d-4c6b-b146-d4fa64a58187",
    "metadata": {
     "tags": []
@@ -357,7 +343,7 @@
     "                   'Mid_long',\n",
     "                   'Paving_future',\n",
     "                   'bin',\n",
-    "                   #'Collisions_Future',\n",
+    "                   'Collisions_Future',\n",
     "                   'Collisions_Future_binary',\n",
     "                   'Collisions_Historical_binary',\n",
     "                   'zip_code']"
@@ -365,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "ce45ef78-e71b-4ddb-b7ce-fa51be667759",
    "metadata": {
     "tags": []
@@ -396,12 +382,12 @@
        "      <th>Stop_Signs</th>\n",
        "      <th>Paving_historical</th>\n",
        "      <th>Bus_stop</th>\n",
-       "      <th>Collisions_Future</th>\n",
        "      <th>Collisions_Historical</th>\n",
        "      <th>RTTYP_I</th>\n",
        "      <th>RTTYP_M</th>\n",
        "      <th>RTTYP_O</th>\n",
        "      <th>RTTYP_S</th>\n",
+       "      <th>RTTYP_U</th>\n",
        "      <th>...</th>\n",
        "      <th>94129</th>\n",
        "      <th>94130</th>\n",
@@ -423,9 +409,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -447,9 +433,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -471,9 +457,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -495,9 +481,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -519,9 +505,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -538,35 +524,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 42 columns</p>\n",
+       "<p>5 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Tile_ID  Stop_Signs  Paving_historical  Bus_stop  Collisions_Future  \\\n",
-       "0       36         0.0                0.0       0.0                0.0   \n",
-       "1       37         0.0                0.0       0.0                0.0   \n",
-       "2      151         0.0                0.0       0.0                0.0   \n",
-       "3      152         0.0                0.0       0.0                0.0   \n",
-       "4      153         0.0                0.0       0.0                0.0   \n",
+       "   Tile_ID  Stop_Signs  Paving_historical  Bus_stop  Collisions_Historical  \\\n",
+       "0       36         0.0                0.0       0.0                    0.0   \n",
+       "1       37         0.0                0.0       0.0                    0.0   \n",
+       "2      151         0.0                0.0       0.0                    0.0   \n",
+       "3      152         0.0                0.0       0.0                    0.0   \n",
+       "4      153         0.0                0.0       0.0                    0.0   \n",
        "\n",
-       "   Collisions_Historical  RTTYP_I  RTTYP_M  RTTYP_O  RTTYP_S  ...  94129  \\\n",
-       "0                    0.0        0        1        0        0  ...      0   \n",
-       "1                    0.0        0        1        0        0  ...      0   \n",
-       "2                    0.0        0        1        0        0  ...      0   \n",
-       "3                    0.0        0        1        0        0  ...      0   \n",
-       "4                    0.0        0        1        0        0  ...      0   \n",
+       "   RTTYP_I  RTTYP_M  RTTYP_O  RTTYP_S  RTTYP_U  ...  94129  94130  94131  \\\n",
+       "0        0        1        0        0        0  ...      0      0      0   \n",
+       "1        0        1        0        0        0  ...      0      0      0   \n",
+       "2        0        1        0        0        0  ...      0      0      0   \n",
+       "3        0        1        0        0        0  ...      0      0      0   \n",
+       "4        0        1        0        0        0  ...      0      0      0   \n",
        "\n",
-       "   94130  94131  94132  94133  94134  94141  94143  94158  94188  \n",
-       "0      0      0      0      0      0      0      0      0      0  \n",
-       "1      0      0      0      0      0      0      0      0      0  \n",
-       "2      0      0      0      0      0      0      0      0      0  \n",
-       "3      0      0      0      0      0      0      0      0      0  \n",
-       "4      0      0      0      0      0      0      0      0      0  \n",
+       "   94132  94133  94134  94141  94143  94158  94188  \n",
+       "0      0      0      0      0      0      0      0  \n",
+       "1      0      0      0      0      0      0      0  \n",
+       "2      0      0      0      0      0      0      0  \n",
+       "3      0      0      0      0      0      0      0  \n",
+       "4      0      0      0      0      0      0      0  \n",
        "\n",
-       "[5 rows x 42 columns]"
+       "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,14 +564,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "f3693092",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(tiles, tiles['Collisions_Future'],\n",
+    "x_train, x_test, y_train, y_test = train_test_split(tiles, tiles['bins_numeric'],\n",
     "                                   random_state=104, \n",
     "                                   test_size=0.20, \n",
     "                                   shuffle=True)"
@@ -593,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "74a2e0c7-8898-4254-bc2a-e950ecccf103",
    "metadata": {
     "tags": []
@@ -626,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "id": "1e942aa3",
    "metadata": {},
    "outputs": [
@@ -650,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "id": "aad9a720-6dba-4a34-bc09-ce5f1fc5283a",
    "metadata": {
     "tags": []
@@ -662,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "id": "dba88a96-5d9b-4880-95f2-1ef9b462f946",
    "metadata": {
     "tags": []
