emulating model in paper

--- a/Arisa - Modeling-Classification.ipynb
+++ b/Arisa - Modeling-Classification.ipynb
@@ -2022,7 +2022,7 @@
     "    images = tf.keras.models.Model(inputs=input1, outputs=pooling)\n",
     "    \n",
     "    #ADDING STREET DATA\n",
-    "    combined = tf.keras.layers.Concatenate(axis = 3)([images.output, input2])\n",
+    "    combined = tf.keras.layers.c([images.output, input2])\n",
     "    #combined = tf.keras.layers.Add()([images.output, input2])\n",
     "    \n",
     "    # PAPER USES RESNET-18 FOR THE REST OF THE MODEL WITH THE COMBINED DATA\n",
