normalized data experiments

--- a/2.0 Noriel - Random Forest - Multi-Class Classification - Full Image Data.ipynb
+++ b/2.0 Noriel - Random Forest - Multi-Class Classification - Full Image Data.ipynb
@@ -319,36 +319,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "735cd809-2205-4638-8d93-1b529c82dfa8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A    1646\n",
-      "B     304\n",
-      "C      72\n",
-      "D      43\n",
-      "E      11\n",
-      "F      10\n",
-      "G       4\n",
-      "I       2\n",
-      "H       2\n",
-      "K       1\n",
-      "Name: bin, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(y_test.value_counts())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "bf220283",
    "metadata": {},
@@ -507,28 +477,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c5275800-edf8-4225-a07c-998b25870208",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 932215296 into shape (8376,1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m input_image_street \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mhstack(\n\u001b[1;32m      2\u001b[0m     (street_mini\u001b[38;5;241m.\u001b[39mreshape((\u001b[38;5;241m8376\u001b[39m,\u001b[38;5;241m52\u001b[39m)),\n\u001b[0;32m----> 3\u001b[0m      \u001b[43mimages_mini\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m8376\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      4\u001b[0m )\n\u001b[1;32m      5\u001b[0m np\u001b[38;5;241m.\u001b[39mshape(input_image_street)\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 932215296 into shape (8376,1)"
-     ]
+     "data": {
+      "text/plain": [
+       "(8376, 111348)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "input_image_street = np.hstack(\n",
     "    (street_mini.reshape((8376,52)),\n",
-    "     images_mini.reshape(8376,1))\n",
+    "     images_mini.reshape(8376,148*188*4))\n",
     ")\n",
     "np.shape(input_image_street)"
    ]
