normalized data experiments update 1

--- a/1.0 Noriel - Gradient Boosted - Multi-Class Classification - Full Image Data - Error.ipynb
+++ b/1.0 Noriel - Gradient Boosted - Multi-Class Classification - Full Image Data - Error.ipynb
@@ -5,7 +5,7 @@
    "id": "d2712fb1-0724-488c-9068-22bdc9a45423",
    "metadata": {},
    "source": [
-    "**Gradient Boosted Tree**"
+    "**Gradient Boosted Tree - Multi-Class Classification - Full Image Data - Not Normalized Data Set**"
    ]
   },
   {
