--- a/2.0 Noriel - Random Forest - Multi-Class Classification - Full Image Data - Error.ipynb
+++ b/2.0 Noriel - Random Forest - Multi-Class Classification - Full Image Data - Error.ipynb
@@ -5,7 +5,7 @@
    "id": "c56e69d7-74ee-4a3a-9063-e38357b2fd88",
    "metadata": {},
    "source": [
-    "**Random Forest**"
+    "**Random Forest - Multi-Class Classification - Full Image Data**"
    ]
   },
   {
