--- a/Arisa - Modeling-Classification-v5.ipynb
+++ b/Arisa - Modeling-Classification-v5.ipynb
@@ -20,13 +20,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-25 06:40:54.594725: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-03-26 00:47:58.491912: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-25 06:40:54.734286: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-03-25 06:40:54.734308: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-03-25 06:40:55.579442: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-25 06:40:55.579571: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-25 06:40:55.579578: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2023-03-26 00:47:58.646696: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-03-26 00:47:58.646727: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-03-26 00:47:59.581524: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-26 00:47:59.581646: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-26 00:47:59.581658: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
@@ -1313,29 +1313,42 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-26 00:50:02.274461: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2023-03-26 00:50:02.274508: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2023-03-26 00:50:02.274539: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (ip-172-31-82-179): /proc/driver/nvidia/version does not exist\n",
+      "2023-03-26 00:50:02.274810: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "/home/ubuntu/capstone/lib/python3.10/site-packages/keras/initializers/initializers_v2.py:120: UserWarning: The initializer VarianceScaling is unseeded and being called multiple times, which will return identical values  each time (even if the initializer is unseeded). Please update your code to provide a seed to the initializer, or avoid using the same initalizer instance more than once.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_14\"\n",
+      "Model: \"model_2\"\n",
       "__________________________________________________________________________________________________\n",
       " Layer (type)                   Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
       " Input_Images (InputLayer)      [(None, 148, 188, 4  0           []                               \n",
       "                                )]                                                                \n",
       "                                                                                                  \n",
-      " conv2d_25 (Conv2D)             (None, 146, 186, 6)  222         ['Input_Images[0][0]']           \n",
+      " conv2d (Conv2D)                (None, 146, 186, 6)  222         ['Input_Images[0][0]']           \n",
       "                                                                                                  \n",
       " Input_Street (InputLayer)      [(None, 96, 96, 39)  0           []                               \n",
       "                                ]                                                                 \n",
       "                                                                                                  \n",
-      " max_pooling2d_5 (MaxPooling2D)  (None, 94, 94, 6)   0           ['conv2d_25[0][0]']              \n",
+      " max_pooling2d (MaxPooling2D)   (None, 94, 94, 6)    0           ['conv2d[0][0]']                 \n",
       "                                                                                                  \n",
-      " conv2d_26 (Conv2D)             (None, 94, 94, 2)    704         ['Input_Street[0][0]']           \n",
+      " conv2d_1 (Conv2D)              (None, 94, 94, 2)    704         ['Input_Street[0][0]']           \n",
       "                                                                                                  \n",
-      " concatenate_10 (Concatenate)   (None, 94, 94, 8)    0           ['max_pooling2d_5[0][0]',        \n",
-      "                                                                  'conv2d_26[0][0]']              \n",
+      " concatenate (Concatenate)      (None, 94, 94, 8)    0           ['max_pooling2d[0][0]',          \n",
+      "                                                                  'conv2d_1[0][0]']               \n",
       "                                                                                                  \n",
-      " conv1_pad (ZeroPadding2D)      (None, 100, 100, 8)  0           ['concatenate_10[0][0]']         \n",
+      " conv1_pad (ZeroPadding2D)      (None, 100, 100, 8)  0           ['concatenate[0][0]']            \n",
       "                                                                                                  \n",
       " conv1 (Conv2D)                 (None, 47, 47, 64)   25088       ['conv1_pad[0][0]']              \n",
       "                                                                                                  \n",
@@ -1400,7 +1413,21 @@
       "                                                                                                  \n",
       " layer2.0.bn1 (BatchNormalizati  (None, 12, 12, 128)  512        ['layer2.0.conv1[0][0]']         \n",
       " on)                                                                                              \n",
-      "                                                                                                  \n",
+      "                                                                                                  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/capstone/lib/python3.10/site-packages/keras/initializers/initializers_v2.py:120: UserWarning: The initializer RandomUniform is unseeded and being called multiple times, which will return identical values  each time (even if the initializer is unseeded). Please update your code to provide a seed to the initializer, or avoid using the same initalizer instance more than once.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " layer2.0.relu1 (ReLU)          (None, 12, 12, 128)  0           ['layer2.0.bn1[0][0]']           \n",
       "                                                                                                  \n",
       " layer2.0.conv2_pad (ZeroPaddin  (None, 14, 14, 128)  0          ['layer2.0.relu1[0][0]']         \n",
@@ -1546,35 +1573,51 @@
       "                                                                                                  \n",
       " layer4.1.relu2 (ReLU)          (None, 3, 3, 512)    0           ['layer4.1.add[0][0]']           \n",
       "                                                                                                  \n",
-      " up_sampling2d_15 (UpSampling2D  (None, 24, 24, 128)  0          ['layer2.1.relu2[0][0]']         \n",
-      " )                                                                                                \n",
+      " up_sampling2d (UpSampling2D)   (None, 24, 24, 128)  0           ['layer2.1.relu2[0][0]']         \n",
       "                                                                                                  \n",
-      " up_sampling2d_16 (UpSampling2D  (None, 24, 24, 256)  0          ['layer3.1.relu2[0][0]']         \n",
-      " )                                                                                                \n",
+      " up_sampling2d_1 (UpSampling2D)  (None, 24, 24, 256)  0          ['layer3.1.relu2[0][0]']         \n",
       "                                                                                                  \n",
-      " up_sampling2d_17 (UpSampling2D  (None, 24, 24, 512)  0          ['layer4.1.relu2[0][0]']         \n",
-      " )                                                                                                \n",
+      " up_sampling2d_2 (UpSampling2D)  (None, 24, 24, 512)  0          ['layer4.1.relu2[0][0]']         \n",
       "                                                                                                  \n",
-      " concatenate_11 (Concatenate)   (None, 24, 24, 960)  0           ['layer1.1.relu2[0][0]',         \n",
-      "                                                                  'up_sampling2d_15[0][0]',       \n",
-      "                                                                  'up_sampling2d_16[0][0]',       \n",
-      "                                                                  'up_sampling2d_17[0][0]']       \n",
+      " concatenate_1 (Concatenate)    (None, 24, 24, 960)  0           ['layer1.1.relu2[0][0]',         \n",
+      "                                                                  'up_sampling2d[0][0]',          \n",
+      "                                                                  'up_sampling2d_1[0][0]',        \n",
+      "                                                                  'up_sampling2d_2[0][0]']        \n",
       "                                                                                                  \n",
-      " conv2d_27 (Conv2D)             (None, 22, 22, 960)  8295360     ['concatenate_11[0][0]']         \n",
+      " conv2d_2 (Conv2D)              (None, 22, 22, 960)  8295360     ['concatenate_1[0][0]']          \n",
       "                                                                                                  \n",
-      " conv2d_28 (Conv2D)             (None, 20, 20, 960)  8295360     ['conv2d_27[0][0]']              \n",
+      " conv2d_3 (Conv2D)              (None, 20, 20, 960)  8295360     ['conv2d_2[0][0]']               \n",
       "                                                                                                  \n",
-      " conv2d_29 (Conv2D)             (None, 18, 18, 2)    17282       ['conv2d_28[0][0]']              \n",
+      " conv2d_4 (Conv2D)              (None, 18, 18, 2)    17282       ['conv2d_3[0][0]']               \n",
       "                                                                                                  \n",
-      " tf.reshape_3 (TFOpLambda)      (1, 648)             0           ['conv2d_29[0][0]']              \n",
+      " tf.reshape (TFOpLambda)        (None, 648)          0           ['conv2d_4[0][0]']               \n",
       "                                                                                                  \n",
-      " output (Dense)                 (1, 11)              7139        ['tf.reshape_3[0][0]']           \n",
+      " output (Dense)                 (None, 11)           7139        ['tf.reshape[0][0]']             \n",
       "                                                                                                  \n",
       "==================================================================================================\n",
       "Total params: 27,817,859\n",
       "Trainable params: 27,808,259\n",
       "Non-trainable params: 9,600\n",
       "__________________________________________________________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-26 00:50:03.505110: W tensorflow/tsl/framework/cpu_allocator_impl.cc:82] Allocation of 2982732800 exceeds 10% of free system memory.\n",
+      "2023-03-26 00:50:05.699830: W tensorflow/tsl/framework/cpu_allocator_impl.cc:82] Allocation of 9632563200 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "WARNING:tensorflow:From /home/ubuntu/capstone/lib/python3.10/site-packages/tensorflow/python/autograph/pyct/static_analysis/liveness.py:83: Analyzer.lamba_check (from tensorflow.python.autograph.pyct.static_analysis.liveness) is deprecated and will be removed after 2023-09-23.\n",
+      "Instructions for updating:\n",
+      "Lambda fuctions will be no more assumed to be used in the statement where they are used, or at least in the same block. https://github.com/tensorflow/tensorflow/issues/56089\n",
+      "  5/210 [..............................] - ETA: 32:59 - loss: 0.9151 - accuracy: 0.6812 - precision: 0.0000e+00 - f1: 0.0950    "
      ]
     }
    ],
@@ -1607,7 +1650,7 @@
     "    #combined = tf.keras.layers.Add()([images.output, street.output])\n",
     "    \n",
     "    # PAPER USES RESNET-18 FOR THE REST OF THE MODEL WITH THE COMBINED DATA\n",
-    "    resnet1, resnet2, resnet3, resnet4 = resnet18(combined)\n",
+    "    resnet1, resnet2, resnet3, resnet4 = resnet18(combined, num_classes = 11)\n",
     "    \n",
     "    resnet2 = tf.keras.layers.UpSampling2D(size=(2,2))(resnet2) # added this per paper\n",
     "    resnet3 = tf.keras.layers.UpSampling2D(size=(4,4))(resnet3) # added this per paper\n",
@@ -1619,7 +1662,7 @@
     "    cnn = tf.keras.layers.Conv2D(960, (3,3), activation=\"relu\")(cnn) # added cnn, per paper\n",
     "    cnn = tf.keras.layers.Conv2D(2, (3,3), activation=\"relu\")(cnn) # added cnn, per paper\n",
     "    \n",
-    "    shape = tf.reshape(cnn, [1,648], name=\"reshape\")\n",
+    "    shape = tf.reshape(cnn, [-1,648], name=\"reshape\")\n",
     "    \n",
     "    output = tf.keras.layers.Dense(units=11, activation='softmax', name='output')(shape) # units = number of classes\n",
     "    \n",
