cnn model 9 run with smote oversampling

--- a/3.2 Arisa - Modeling-Classification-v9 - Noriel Run - SMOTE.ipynb
+++ b/3.2 Arisa - Modeling-Classification-v9 - Noriel Run - SMOTE.ipynb
@@ -1869,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "52d91844-64dc-4348-b024-783281f26bee",
    "metadata": {
     "tags": []
@@ -1887,25 +1887,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: model.9.last.epoch/assets\n"
+      "INFO:tensorflow:Assets written to: model.9a.last.epoch/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: model.9.last.epoch/assets\n"
+      "INFO:tensorflow:Assets written to: model.9a.last.epoch/assets\n"
      ]
     }
    ],
    "source": [
     "# saving last epoch model just in case \n",
-    "cnn_model.save('model.9.last.epoch')"
+    "cnn_model.save('model.9a.last.epoch')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "4cccdeff-f234-4fe1-b16b-c5db3c38830e",
    "metadata": {
     "tags": []
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "be7c6bdb-832f-43fa-bcf9-d5908aafdb77",
    "metadata": {
     "tags": []
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "e805e4cd-dcb7-4568-845a-2e4e62d8a920",
    "metadata": {},
    "outputs": [
@@ -1972,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "bf08e9fe-11ef-4aea-9cea-d4cd5bc26312",
    "metadata": {},
    "outputs": [
@@ -2001,46 +2001,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "e6468f2e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "No file or directory found at model.9",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[38], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# load the model\u001b[39;00m\n\u001b[1;32m      2\u001b[0m filepath \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel.9\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m best_model \u001b[38;5;241m=\u001b[39m \u001b[43mload_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/capstone/lib/python3.10/site-packages/keras/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[0;32m~/capstone/lib/python3.10/site-packages/keras/saving/legacy/save.py:227\u001b[0m, in \u001b[0;36mload_model\u001b[0;34m(filepath, custom_objects, compile, options)\u001b[0m\n\u001b[1;32m    225\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(filepath_str, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    226\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mgfile\u001b[38;5;241m.\u001b[39mexists(filepath_str):\n\u001b[0;32m--> 227\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIOError\u001b[39;00m(\n\u001b[1;32m    228\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo file or directory found at \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilepath_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    229\u001b[0m         )\n\u001b[1;32m    231\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mgfile\u001b[38;5;241m.\u001b[39misdir(filepath_str):\n\u001b[1;32m    232\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m saved_model_load\u001b[38;5;241m.\u001b[39mload(\n\u001b[1;32m    233\u001b[0m             filepath_str, \u001b[38;5;28mcompile\u001b[39m, options\n\u001b[1;32m    234\u001b[0m         )\n",
-      "\u001b[0;31mOSError\u001b[0m: No file or directory found at model.9"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load the model\n",
-    "filepath = \"model.9\"\n",
+    "filepath = \"model.9a\"\n",
     "best_model = load_model(filepath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "id": "dcbe81ee-3020-46ca-a1eb-93acd0da22c4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'best_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[39], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m \u001b[43mbest_model\u001b[49m\u001b[38;5;241m.\u001b[39mpredict([images_mini_v, street_mini_2_v])\n\u001b[1;32m      2\u001b[0m y_pred\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'best_model' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57/57 [==============================] - 65s 1s/step\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.08955936, 0.10861241, 0.08947036, ..., 0.08590282, 0.08131593,\n",
+       "        0.09354587],\n",
+       "       [0.0918624 , 0.11770456, 0.0899149 , ..., 0.08024959, 0.07296339,\n",
+       "        0.08918291],\n",
+       "       [0.08677574, 0.14411423, 0.10066072, ..., 0.05564682, 0.06841826,\n",
+       "        0.11501734],\n",
+       "       ...,\n",
+       "       [0.0933817 , 0.11457869, 0.09234195, ..., 0.08054277, 0.07080285,\n",
+       "        0.08796627],\n",
+       "       [0.08978748, 0.11176183, 0.09198775, ..., 0.08502644, 0.07573849,\n",
+       "        0.09530602],\n",
+       "       [0.08972348, 0.1170605 , 0.09127209, ..., 0.08109432, 0.07492549,\n",
+       "        0.09097836]], dtype=float32)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
