--- a/Arisa - Sampling_v2.ipynb
+++ b/Arisa - Sampling_v2.ipynb
@@ -12,11 +12,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-01 22:20:45.287681: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-04-08 19:00:26.311329: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-04-01 22:20:46.258207: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:/opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:\n",
-      "2023-04-01 22:20:46.258349: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:/opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:\n",
-      "2023-04-01 22:20:46.258361: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2023-04-08 19:00:27.226339: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:/opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:\n",
+      "2023-04-08 19:00:27.226478: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:/opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:\n",
+      "2023-04-08 19:00:27.226490: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "f3693092",
    "metadata": {
     "tags": []
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "c713d7a6",
    "metadata": {
     "tags": []
@@ -213,7 +213,7 @@
        "4                0.0                    0.0     M  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "575b4831-2a18-46e7-b50a-0fd0716393a4",
    "metadata": {
     "tags": []
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "1e942aa3",
    "metadata": {
     "tags": []
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "a432e6b9-3f4e-40c8-bd71-31d8fd5d31b7",
    "metadata": {
     "tags": []
@@ -286,7 +286,7 @@
        "1060"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "ca7614df",
    "metadata": {
     "tags": []
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "3c0cde85",
    "metadata": {
     "tags": []
@@ -502,7 +502,7 @@
        "31        0        0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "73a628a9",
    "metadata": {
     "tags": []
@@ -525,7 +525,7 @@
        "3241"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "04bcb273",
    "metadata": {
     "tags": []
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "0d50fdd4",
    "metadata": {
     "tags": []
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "81a7f54d-b827-4e70-b910-9ff6e434045d",
    "metadata": {
     "tags": []
@@ -781,7 +781,7 @@
        "4        0        0    0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,18 +791,24 @@
     "for i in tiles['Collisions_Future']:\n",
     "    if i == 0: \n",
     "        b = 0\n",
-    "    elif (i == 1) or (i == 2):\n",
+    "    elif (i >=1 and i<=4):\n",
     "        b = 1\n",
-    "    elif (i == 3) or (i == 4):\n",
+    "    elif (i >=5 and i<=8):\n",
     "        b = 2\n",
-    "    elif (i == 5) or (i == 6):\n",
-    "        b = 3\n",
-    "    elif (i == 7) or (i == 8):\n",
-    "        b = 4\n",
-    "    elif (i == 9) or (i == 10):\n",
-    "        b = 5\n",
     "    else:\n",
-    "        b = 6\n",
+    "        b = 3\n",
+    "    # elif (i == 1) or (i == 2):\n",
+    "    #     b = 1 \n",
+    "    # elif (i == 3) or (i == 4):\n",
+    "    #     b = 2 # 1\n",
+    "    # elif (i == 5) or (i == 6):\n",
+    "    #     b = 3 # 2 \n",
+    "    # elif (i == 7) or (i == 8):\n",
+    "    #     b = 4 # 2\n",
+    "    # elif (i == 9) or (i == 10):\n",
+    "    #     b = 5 # 2\n",
+    "    # else:\n",
+    "    #     b = 6 # 3\n",
     "    # elif (i == 11) or (i == 12):\n",
     "    #     b = 6\n",
     "    # elif (i == 13) or (i == 14):\n",
@@ -826,19 +832,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "4ae63947-d349-4da1-842b-25ebbd61560e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "# tiles2.to_csv('./Data/Tiles_binned.csv', index = False) "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "1f59f768-feb8-46e3-958e-df1a7bec8fda",
    "metadata": {
     "tags": []
@@ -848,16 +852,13 @@
      "data": {
       "text/plain": [
        "0    8290\n",
-       "1    1505\n",
-       "2     355\n",
-       "3     177\n",
-       "4      72\n",
-       "5      36\n",
-       "6      36\n",
+       "1    1860\n",
+       "2     249\n",
+       "3      72\n",
        "Name: bin, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "96b26cb5-1674-40d6-a39e-94e0e97d6f79",
    "metadata": {
     "tags": []
@@ -1220,7 +1221,7 @@
        "[10471 rows x 19 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "d481c34e-dbe5-49cc-9508-bea2d64de805",
    "metadata": {
     "tags": []
@@ -1241,16 +1242,13 @@
      "data": {
       "text/plain": [
        "0    8290\n",
-       "1    1505\n",
-       "2     355\n",
-       "3     177\n",
-       "4      72\n",
-       "5      36\n",
-       "6      36\n",
+       "1    1860\n",
+       "2     249\n",
+       "3      72\n",
        "Name: bin, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,11 +1259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a965f0ad-7ad3-4e28-998e-dc87c31df8ea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tiles2.to_csv('./Data/Tiles_binned.csv', index = False) "
+   ]
   }
  ],
  "metadata": {
